@@ -36,6 +36,7 @@ Test::More        = 0
 Test::Exception   = 0
 Test::Warn        = 0.11 ;-- tests fail with 0.08
 Test::Command     = 0
+Probe::Perl       = 0 
 
 [@Filter]
 bundle = @Classic
